# compliance-global-ai

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.sh  smithery.yaml
cg_ai/: __init__.py  start.py
cg_ai/config/: config.py
cg_ai/controllers/: asgi.py  base.py  compliance.py  router.py
cg_ai/mcp/: agent.py  client.py  ocr.py  server.py
cg_ai/models/: schema.py
cg_ai/service/: service.py
cg_ai/utils/: utils.py
compliance_global_ai/: __init__.py  agent.py  api.py  app.py  client.py  main.py  ocr.py  server.py
src/: __init__.py  main.py  server.py
