[project]
name = "compliance-global-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alibabacloud-ocr-api20210707>=3.1.3",
    "httpx>=0.28.1",
    "langchain-core>=0.3.60",
    "langchain-mcp-adapters>=0.1.0",
    "langchain[openai]>=0.3.25",
    "langgraph>=0.4.5",
    "mcp[cli]>=1.9.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "textract>=1.6.5",
]
